; ModuleID = '/home/carl/AnghaBench/freebsd/sys/vm/extr_vm_fault.c_release_page.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/vm/extr_vm_fault.c_release_page.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.faultstate = type { i32* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.faultstate*)* @release_page to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @release_page(%struct.faultstate* %0) #0 {
  %2 = alloca %struct.faultstate*, align 8
  store %struct.faultstate* %0, %struct.faultstate** %2, align 8
  %3 = load %struct.faultstate*, %struct.faultstate** %2, align 8
  %4 = getelementptr inbounds %struct.faultstate, %struct.faultstate* %3, i32 0, i32 0
  %5 = load i32*, i32** %4, align 8
  %6 = icmp ne i32* %5, null
  br i1 %6, label %7, label %26

7:                                                ; preds = %1
  %8 = load %struct.faultstate*, %struct.faultstate** %2, align 8
  %9 = getelementptr inbounds %struct.faultstate, %struct.faultstate* %8, i32 0, i32 0
  %10 = load i32*, i32** %9, align 8
  %11 = call i32 @vm_page_lock(i32* %10)
  %12 = load %struct.faultstate*, %struct.faultstate** %2, align 8
  %13 = getelementptr inbounds %struct.faultstate, %struct.faultstate* %12, i32 0, i32 0
  %14 = load i32*, i32** %13, align 8
  %15 = call i32 @vm_page_deactivate(i32* %14)
  %16 = load %struct.faultstate*, %struct.faultstate** %2, align 8
  %17 = getelementptr inbounds %struct.faultstate, %struct.faultstate* %16, i32 0, i32 0
  %18 = load i32*, i32** %17, align 8
  %19 = call i32 @vm_page_unlock(i32* %18)
  %20 = load %struct.faultstate*, %struct.faultstate** %2, align 8
  %21 = getelementptr inbounds %struct.faultstate, %struct.faultstate* %20, i32 0, i32 0
  %22 = load i32*, i32** %21, align 8
  %23 = call i32 @vm_page_xunbusy(i32* %22)
  %24 = load %struct.faultstate*, %struct.faultstate** %2, align 8
  %25 = getelementptr inbounds %struct.faultstate, %struct.faultstate* %24, i32 0, i32 0
  store i32* null, i32** %25, align 8
  br label %26

26:                                               ; preds = %7, %1
  ret void
}

declare dso_local i32 @vm_page_lock(i32*) #1

declare dso_local i32 @vm_page_deactivate(i32*) #1

declare dso_local i32 @vm_page_unlock(i32*) #1

declare dso_local i32 @vm_page_xunbusy(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
